--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,7 @@ body {
 
 .caixa-media {
     margin-top: 30px;
+    margin-left: 10px;
 }
 
 
@@ -59,12 +60,13 @@ body {
     color: #ffffff;
     font-size: 28px;
     font-weight: 400;
+    text-align: center;
 }
 
 .temp {
     font-size: 20px;
     color: #ffffff;
-    margin-top: 20px;
+    margin-top: 30px;
 }
 
 .caixa-menor {
@@ -82,4 +84,14 @@ body {
 .umidade {
     color: #ffffff;
     margin-top: 20px;
+}
+
+.mensagem-erro {
+    color: #ffffff;
+    margin-top: 40px;
+    margin-left: 4px;
+    text-align: justify;
+    letter-spacing: -1.4px;
+    font-size: 19px;
+    font-weight: 300;
 }
