--- a/styles.css
+++ b/styles.css
@@ -2,13 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Lexend Deca', sans-serif;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Lexend Deca', 'Open Sans', sans-serif;
 }
 
 body {
     height: 100vh;
-    width: 100vw;
     width: 100vw;
     display: flex;
     justify-content: center;
@@ -91,7 +89,7 @@ body {
     margin-top: 40px;
     margin-left: 4px;
     text-align: justify;
-    letter-spacing: -1.4px;
+    letter-spacing: 0px;
     font-size: 19px;
     font-weight: 300;
 }
